# ChangeLog for sci-physics/pythia
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/pythia/ChangeLog,v 1.10 2009/05/05 19:41:08 fauli Exp $

  05 May 2009; Christian Faulhammer <fauli@gentoo.org> pythia-6.4.19.ebuild:
  stable x86, bug 245875

  22 Mar 2009; Jeremy Olexa <darkside@gentoo.org> pythia-6.4.19.ebuild:
  amd64 stable, bug 245875

  22 Mar 2009; Jeremy Olexa <darkside@gentoo.org> pythia-8.1.08-r1.ebuild:
  amd64 stable, bug 245875

*pythia-8.1.20 (18 Mar 2009)
*pythia-6.4.20 (18 Mar 2009)

  18 Mar 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +pythia-6.4.20.ebuild, +pythia-8.1.20.ebuild:
  Version bumps

  03 Mar 2009; Ferris McCormick <fmccor@gentoo.org> pythia-6.4.19.ebuild,
  pythia-8.1.08-r1.ebuild:
  Sparc stable, part of Bug #245875.

*pythia-6.4.19 (13 Dec 2008)

  13 Dec 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +pythia-6.4.19.ebuild:
  Version bump. Now build our own tar ball to allow faster parallel build

  16 Sep 2008; Jeroen Roovers <jer@gentoo.org> pythia-6.4.18.ebuild:
  Marked ~hppa (bug #231484).

  16 Sep 2008; Jeroen Roovers <jer@gentoo.org> pythia-8.1.08-r1.ebuild:
  Marked ~hppa (bug #231484).

*pythia-8.1.08-r1 (07 Sep 2008)

  07 Sep 2008; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
  pythia-6.4.18.ebuild, +pythia-8.1.08-r1.ebuild:
  pythia:6, added more examples, some cleaning. pythia:8, added HepMC
  support, respect flags, better testing, cleaning.

*pythia-8.1.08 (02 Sep 2008)
*pythia-6.4.18 (02 Sep 2008)

  02 Sep 2008; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +pythia-6.4.18.ebuild, +pythia-8.1.08.ebuild:
  Initial import. Thanks Benjamin Bannier for his good work on bug #231484
