@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/pythia/Attic/pythia-8.1.08-r1.ebuild,v 1.4 2009/03/22 21:42:10 darkside Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/pythia/Attic/pythia-8.1.08-r1.ebuild,v 1.5 2009/05/05 19:42:02 fauli Exp $
 
 EAPI=1
 
@@ -15,7 +15,7 @@ SRC_URI="http://home.thep.lu.se/~torbjorn/${PN}${MV}/${MY_P}.tgz"
 
 LICENSE="GPL-2"
 SLOT="8"
-KEYWORDS="amd64 ~hppa sparc ~x86"
+KEYWORDS="amd64 ~hppa sparc x86"
 IUSE="doc examples +hepmc"
 
 DEPEND="hepmc? ( sci-physics/hepmc )"
