@@ -1,6 +1,10 @@
 # ChangeLog for sci-physics/root
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/root/ChangeLog,v 1.46 2009/05/05 14:44:15 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/root/ChangeLog,v 1.47 2009/05/05 19:43:13 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  root-5.20.00-r3.ebuild:
+  stable x86, bug 245875
 
   05 May 2009; Christian Faulhammer <fauli@gentoo.org>
   root-5.20.00-r3.ebuild, root-5.22.00-r1.ebuild:
