@@ -1,6 +1,10 @@
 # ChangeLog for sci-physics/pythia
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/pythia/ChangeLog,v 1.10 2009/05/05 19:41:08 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/pythia/ChangeLog,v 1.11 2009/05/05 19:42:02 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  pythia-8.1.08-r1.ebuild:
+  stable x86, bug 245875
 
   05 May 2009; Christian Faulhammer <fauli@gentoo.org> pythia-6.4.19.ebuild:
   stable x86, bug 245875
